--- a/todo.txt
+++ b/todo.txt
@@ -14,3 +14,23 @@ for each active:
  - sum up, update lastupdated and currentTotal
 
 rename settings to addBudget or something
+
+transactionInput
+ - newTransaction
+ - allUSers
+  - addTransaction
+ - if add or minus (checkbox) (for upload)
+
+
+move out filter - for graphs
+ - allUsers
+ - allCategories
+ - allMonths
+ - allYears
+ - pass in updateFilter
+
+- allUsers/categoires/months/years should be stored in filterService.js
+
+fix online payment (still getting through)
+
+users/categories
